crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__integer_default_true.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data iData (trace "operand" in 42) of
  DataList wrong#1 -> trace "wrong" in error
  _ -> trace "fallback" in 9
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_2
    (force
      [[[[[[(force (builtin chooseData)) generated_2]
        (delay
          (force
            [[(force (builtin trace)) (con string "fallback")] (delay (con integer 9))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "fallback")] (delay (con integer 9))]))]
        (delay (force [[(force (builtin trace)) (con string "wrong")] (delay (error))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "fallback")] (delay (con integer 9))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "fallback")] (delay (con integer 9))]))]))
    [(builtin iData)
      (force
        [[(force (builtin trace)) (con string "operand")] (delay (con integer 42))])]])
--- optimized Core
let anf#3 : int = trace "operand" in 42 in
let anf#4 : Data = iData anf#3 in
trace "fallback" in 9
--- optimized UPLC
(program 1.1.0
  [(lam builtin_3
    [(lam anf_1
      [(lam anf_2
        (force [[builtin_3 (con string "fallback")] (delay (con integer 9))]))
        [(builtin iData) anf_1]])
      (force [[builtin_3 (con string "operand")] (delay (con integer 42))])])
    (force (builtin trace))])
--- isolated pass
--- isolated ANF input
let anf#4 : int = trace "operand" in 42 in
let anf#5 : Data = iData anf#4 in
case@Data anf#5 of
  DataList wrong#1 -> trace "wrong" in error
  _ -> trace "fallback" in 9
--- isolated folded Core
let anf#4 : int = trace "operand" in 42 in
let anf#5 : Data = iData anf#4 in
trace "fallback" in 9
--- isolated cleaned Core
let anf#4 : int = trace "operand" in 42 in
let anf#5 : Data = iData anf#4 in
trace "fallback" in 9
--- isolated UPLC before
(program 1.1.0
  [(lam anf_4
    [(lam anf_5
      [(lam generated_6
        (force
          [[[[[[(force (builtin chooseData)) generated_6]
            (delay
              (force
                [[(force (builtin trace)) (con string "fallback")] (delay (con integer 9))]))]
            (delay
              (force
                [[(force (builtin trace)) (con string "fallback")] (delay (con integer 9))]))]
            (delay (force [[(force (builtin trace)) (con string "wrong")] (delay (error))]))]
            (delay
              (force
                [[(force (builtin trace)) (con string "fallback")] (delay (con integer 9))]))]
            (delay
              (force
                [[(force (builtin trace)) (con string "fallback")] (delay (con integer 9))]))]))
        anf_5])
      [(builtin iData) anf_4]])
    (force
      [[(force (builtin trace)) (con string "operand")] (delay (con integer 42))])])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_4
    [(lam anf_5
      (force
        [[(force (builtin trace)) (con string "fallback")] (delay (con integer 9))]))
      [(builtin iData) anf_4]])
    (force
      [[(force (builtin trace)) (con string "operand")] (delay (con integer 42))])])
--- result
(con integer 9)
--- logs
["operand", "fallback"]
