crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__integer_invalid_delay_fallback_false.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data iData (delay (\x#1 : int -> x#1)) of
  DataI unused#14 -> 9
  _ -> trace "unreachable" in 0
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_15
    (force
      [[[[[[(force (builtin chooseData)) generated_15]
        (delay
          (force
            [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]
        (delay (con integer 9))]
        (delay
          (force
            [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]))
    [(builtin iData) (delay (lam x_1 x_1))]])
--- optimized Core
let anf#4 : Data = iData (delay (\x#2 : int -> x#2)) in
case@Data anf#4 of
  DataI unused#3 -> 9
  _ -> trace "unreachable" in 0
--- optimized UPLC
(program 1.1.0
  [(lam builtin_7
    [(lam builtin_9
      [(lam partial_10
        [(lam anf_5
          [(lam generated_8
            (force
              [[[[[[builtin_9 generated_8] (delay (force [partial_10 (delay (con integer 0))]))]
                (delay (force [partial_10 (delay (con integer 0))]))]
                (delay (force [partial_10 (delay (con integer 0))]))]
                (delay (con integer 9))]
                (delay (force [partial_10 (delay (con integer 0))]))]))
            anf_5])
          [(builtin iData) (delay (lam x_1 x_1))]])
        [builtin_7 (con string "unreachable")]])
      (force (builtin chooseData))])
    (force (builtin trace))])
--- isolated pass
--- isolated ANF input
let anf#15 : Data = iData (delay (\x#1 : int -> x#1)) in
case@Data anf#15 of
  DataI unused#14 -> 9
  _ -> trace "unreachable" in 0
--- isolated folded Core
let data_operand#16 : @delay (int -> int) = delay (\x#1 : int -> x#1) in
let anf#15 : Data = iData data_operand#16 in
let unused#14 : @delay (int -> int) = data_operand#16 in
9
--- isolated cleaned Core
let anf#15 : Data = iData (delay (\x#1 : int -> x#1)) in
9
--- isolated UPLC before
(program 1.1.0
  [(lam anf_15
    [(lam generated_16
      (force
        [[[[[[(force (builtin chooseData)) generated_16]
          (delay
            (force
              [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]
          (delay
            (force
              [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]
          (delay
            (force
              [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]
          (delay (con integer 9))]
          (delay
            (force
              [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]))
      anf_15])
    [(builtin iData) (delay (lam x_1 x_1))]])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_15 (con integer 9)) [(builtin iData) (delay (lam x_1 x_1))]])
--- result
error: NotAConstant(Delay(Lambda { parameter: DeBruijn(0), body: Var(DeBruijn(1)) }, Empty))
--- logs
[]
