crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__integer_invalid_function_fallback_false.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data iData (\x#1 : int -> x#1) of
  DataI unused#8 -> 9
  _ -> trace "unreachable" in 0
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_9
    (force
      [[[[[[(force (builtin chooseData)) generated_9]
        (delay
          (force
            [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]
        (delay (con integer 9))]
        (delay
          (force
            [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]))
    [(builtin iData) (lam x_1 x_1)]])
--- optimized Core
let anf#4 : Data = iData (\x#2 : int -> x#2) in
9
--- optimized UPLC
(program 1.1.0 [(lam anf_3 (con integer 9)) [(builtin iData) (lam x_1 x_1)]])
--- isolated pass
--- isolated ANF input
let anf#9 : Data = iData (\x#1 : int -> x#1) in
case@Data anf#9 of
  DataI unused#8 -> 9
  _ -> trace "unreachable" in 0
--- isolated folded Core
let data_operand#10 : int -> int = \x#1 : int -> x#1 in
let anf#9 : Data = iData data_operand#10 in
let unused#8 : int -> int = data_operand#10 in
9
--- isolated cleaned Core
let anf#9 : Data = iData (\x#1 : int -> x#1) in
9
--- isolated UPLC before
(program 1.1.0
  [(lam anf_9
    [(lam generated_10
      (force
        [[[[[[(force (builtin chooseData)) generated_10]
          (delay
            (force
              [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]
          (delay
            (force
              [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]
          (delay
            (force
              [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]
          (delay (con integer 9))]
          (delay
            (force
              [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 0))]))]))
      anf_9])
    [(builtin iData) (lam x_1 x_1)]])
--- isolated UPLC after
(program 1.1.0 [(lam anf_9 (con integer 9)) [(builtin iData) (lam x_1 x_1)]])
--- result
error: NotAConstant(Lambda { parameter: DeBruijn(0), body: Var(DeBruijn(1)), env: Empty })
--- logs
[]
