crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__integer_invalid_unselected_arity.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "format!(\"--- before\\n{}\\n--- after\\n{}\\n--- errors\\n{left:?}\\n{right:?}\",\npretty(before), pretty(after))"
---
--- before
let data#2 : Data = iData 42 in
case@Data data#2 of
  DataI payload#1 -> 42
  DataList -> 0
--- after
let data#2 : Data = iData 42 in
case@Data data#2 of
  DataI payload#1 -> 42
  DataList -> 0
--- errors
InvalidCase("invalid Data branch")
InvalidCase("invalid Data branch")
